# rust-cli

./: .cspell.json  .pre-commit-config.yaml  Cargo.toml  Makefile
.github/workflows/: ci.yaml
cli/: Cargo.toml
cli/src/: complete.rs  lib.rs  log.rs
crates/lib/api/: Cargo.toml
crates/lib/api/src/: lib.rs
crates/lib/api/src/bw/: get.rs  types.rs
crates/lib/api/src/clash/: mod.rs
crates/lib/api/src/clash/proxies/: delay.rs  mod.rs
crates/lib/api/src/cloudflare/: constants.rs  mod.rs
crates/lib/api/src/cloudflare/dns/: mod.rs
crates/lib/api/src/cloudflare/dns/records/: mod.rs
crates/lib/api/src/ipsb/: mod.rs
crates/lib/api/src/liblaf/: ip.rs  mod.rs  send.rs  sub.rs
crates/lib/api/src/telepush/: mod.rs
crates/lib/cli/: Cargo.toml
crates/lib/cli/src/: color.rs
docs/: cf.md  gfw.md
gfw/: Cargo.toml
gfw/src/: main.rs
gfw/src/api/: mod.rs
gfw/src/api/clash/: proxies.rs
gfw/src/api/clash/proxies/: delay.rs  mod.rs
gfw/src/api/ipapiis/: mod.rs
gfw/src/api/ipsb/: mod.rs
gfw/src/api/liblaf/: ip.rs  mod.rs
gfw/src/api/proxycheckio/: mod.rs
gfw/src/cmd/: ip.rs  list.rs  mod.rs  now.rs
gfw/src/proc/: mod.rs
gfw/src/proc/bw/: get.rs  mod.rs
