[workspace]
members = ["crates/bin/*", "crates/lib/*"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.82"
chrono = { features = ["serde"], version = "0.4.38" }
clap = { features = ["derive"], version = "4.5.4" }
clap-verbosity-flag = "3.0.0"
colored = "2.1.0"
concolor-clap = "0.1.0"
confy = "1.0.0"
console = "0.16.0"
directories = "5.0.1"
indicatif = "0.18.0"
ipnet = "2.9.0"
network-interface = "2.0.0"
once_cell = "1.19.0"
reqwest = { features = ["json"], version = "0.12.4" }
serde = { features = ["derive"], version = "1.0.200" }
serde_json = "1.0.116"
shadow-rs = "0.38.0"
tabled = { features = ["ansi"], version = "0.20.0" }
tokio = { features = ["full"], version = "1.37.0" }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
url = { features = ["serde"], version = "2.5.0" }
whoami = "1.5.1"

[workspace.package]
edition = "2021"
version = "0.0.0"
