[dependencies]
cli = { path = "../cli" }
tabled = { features = ["ansi"], version = "0.15.0" }
anyhow.workspace = true
clap.workspace = true
clap-verbosity-flag.workspace = true
colored.workspace = true
concolor-clap.workspace = true
console.workspace = true
reqwest.workspace = true
serde.workspace = true
tokio.workspace = true
tracing.workspace = true

[package]
name = "gfw"
edition.workspace = true
version.workspace = true
