[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
cli = { path = "../cli" }
futures = "0.3.30"
indicatif = "0.17.8"
once_cell = "1.19.0"
phf = { features = ["macros"], version = "0.11.2" }
serde_json = "1.0.115"
tabled = { features = ["ansi"], version = "0.15.0" }
anyhow.workspace = true
clap.workspace = true
clap-verbosity-flag.workspace = true
colored.workspace = true
concolor-clap.workspace = true
console.workspace = true
reqwest.workspace = true
serde.workspace = true
tokio.workspace = true
tracing.workspace = true
url = { version = "2.5.0", features = ["serde"] }

[package]
name = "gfw"
edition.workspace = true
version.workspace = true
